# ffmpeg_study

./: CMakeLists.txt  main_264codec.cpp  main_client.cpp  main_codec.cpp  main_decode_test.cpp  main_encode_test_2.cpp  main_encode_test_origin.cpp  main_live_transcodec.cpp  main_opencv_tran.cpp  main_server.cpp  main_transcodec_test.cpp  main_webcam_record.cpp
src/client/: frame_client.cpp
src/codec/: frame_codec.cpp  frame_codec.hpp  frame_handler.cpp  frame_handler.hpp
src/server/: frame_server.cpp  frame_server.hpp
vendors/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
vendors/lib/: libboost_random-vc143-mt-gd-x64-1_86.lib
